# TapeSort

./: .gitignore  CMakeLists.txt  FileTape.hpp  README.md  Tape.hpp  TapeSort.hpp  TepeSort.hpp  build.sh  main  main.cpp  settings.hpp  start.sh  test_start.sh
Tape/: FileTape.hpp
config/: config.txt
config/config_map/: ConfigMap.cpp  ConfigMap.hpp
files/: input.txt  output.txt
src/: TapeSort.hpp  settings.hpp
src/Tape/: FileTape.hpp  Tape.hpp
src/configs/: ConfigReader.hpp  config.txt
src/configs/config_map/: ConfigMap.cpp  ConfigMap.hpp
tests/: smoke_test.cpp
